# cosmic-wallshift

./: .gitignore  Cargo.toml  DEPENDENCY_UPDATES.md  LICENSE  README.md  build.rs  cargo-sources.json  flatpak-cargo-generator.py  io.github.YOUR_USERNAME.CosmicBgSync.yml  io.github.nagyrenato.CosmicBgSync.yml  io.github.nagyrenato.CosmicWallShift.yml  justfile
res/: io.github.YOUR_USERNAME.CosmicBgSync.desktop  io.github.YOUR_USERNAME.CosmicBgSync.metainfo.xml  io.github.nagyrenato.CosmicBgSync.desktop  io.github.nagyrenato.CosmicBgSync.metainfo.xml  io.github.nagyrenato.CosmicWallShift.desktop  io.github.nagyrenato.CosmicWallShift.metainfo.xml
src/: app.rs  main.rs  message.rs  tray.rs  wallpaper.rs  watcher.rs
