[package]
name = "cosmic-wallshift"
version = "0.1.0"
edition = "2024"
description = "Automatically switch wallpaper when the COSMIC Desktop theme toggles between light and dark mode"
license = "GPL-3.0-or-later"
repository = "https://github.com/nagyrenato/cosmic-wallshift"
homepage = "https://github.com/nagyrenato/cosmic-wallshift"
authors = ["Renato Nagy <nagy.renato@hotmail.com>"]

[dependencies]
cosmic = { git = "https://github.com/pop-os/libcosmic", package = "libcosmic", features = ["winit", "tokio", "wayland"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "fs", "sync"] }
notify = "8.2.0"
ksni = "0.3.3"
libc = "0.2.183"
